--- a/public/zh-cn/about/index.html
+++ b/public/zh-cn/about/index.html
@@ -106,7 +106,7 @@
                 <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">About</h1><div class="content" id="content"><p>我现在是一名USC的CS专业研究生，写博客网站是为了记录自己学习的过程，希望我的文章能够给你带来帮助。</p>
 </div></div></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2021</span><span class="icp-splitter">&nbsp;|&nbsp;</span><br class="icp-br"/>
+        <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2019 - 2021</span><span class="icp-splitter">&nbsp;|&nbsp;</span><br class="icp-br"/>
                     <span class="icp"><a href='https://beian.miit.gov.cn/#/Integrated/index'>浙ICP备2021000092</a></span></div>
         </div>
     </footer></div>
